# Rendering-fundamentals

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: helpers.h  input.h  lab1.h  lab2.h  lab3.h  scene.h  test_model.h  triangle.h  window.h
labscenes/: example_scene.cpp  example_scene.h  lab1_scene.cpp  lab1_scene.h  lab2_scene.cpp  lab2_scene.h  lab3_scene.cpp  lab3_scene.h
src/: lab1.cpp  main.cpp  test_model.cpp  window.cpp
